@@ -29,6 +29,7 @@
 		- Added test for "InstanceElementIterator".
 		- Fixed case sensitivity when comparing base attribute/relation names.
 		  (Base element/attribute/relation names has to be compared case insensitive)
+		- Fixed writing of LocalColumn values.
 		
 	0.1.3
 	
